# OpenFlow-Playground

./: .gcloudignore  .gitignore  .gitlab-ci.yml  .gitmodules  .markdownlint.yaml  .pre-commit-config.yaml  .ruff.toml  AGENTS.md  APPLICATION_MODEL.md  ARCHITECTURE.md  BACKLOG_DISCOVERY_IMPLEMENTATION_SUMMARY.md  BACKLOG_MODEL_CRUD_IMPLEMENTATIONS.md  BACKLOG_RECONCILIATION_SUMMARY.md  BACKLOG_SYSTEM_IMPLEMENTATION_SUMMARY.md  BEAST_MODE_INTEGRATION_LOG.md  BEAST_MODE_TEST_REMEDIATION_SUMMARY.md  CC_SDD_INTEGRATION_SUMMARY.md  CLOUDBUILD_GITHUB_FINAL_DIAGNOSTIC.md  CLOUDBUILD_GITHUB_LLM_WRAPPER.md  CLOUDBUILD_GITHUB_PROBLEM_SPORE.md  CODE_QUALITY_AUTOMATION_PLAN.md  COMPLETE_QUALITY_SYSTEM_ARCHITECTURE.md  COMPREHENSIVE_ARTIFACT_ANALYSIS_PROGRESS_SUMMARY.md  COMPREHENSIVE_ARTIFACT_ANALYSIS_SUMMARY.md  COMPREHENSIVE_PROJECT_AUDIT_SUMMARY.md  CURRENT_STATE_SUMMARY.md  CURSOR_RULES_DRIFT_RCA.md  Calculator.py  CalculatorUI.py  DEMO_FOCUSED_ARCHITECTURE_SUMMARY.md  DIVERSITY_HYPOTHESIS_CARD.md  DOCUMENTATION_IMPROVEMENTS.md  DUAL_PURPOSE_FINAL_ANALYSIS.md  DUAL_PURPOSE_PACKAGING_PLAN.md  Dockerfile  Dockerfile.kiro-agent  ENHANCED_ROUND_TRIP_SUCCESS.md  EXTRACTION_ACTION_PLAN.md  FINAL_PHASE_SUMMARY.md  GHOSTBUSTERS_ANALYSIS_REQUEST.md  (+388 more)
.github/: COPILOT_CONTEXT.md  copilot-instructions.md
.model_backups/: project_model_registry_20250825_095156.json
.quality_metrics/: .gitkeep  ci_metrics_unknown.json  metrics_20250814_160905.json  metrics_20250814_162122.json  metrics_20250814_162212.json  metrics_20250814_162423.json  metrics_20250818_223514.json  metrics_20250818_230353.json  metrics_20250818_230406.json  metrics_20250818_230446.json  metrics_20251030_143955.json
ackbert/: .gitignore  Makefile  README.md  SETUP_COMPLETE.md  pyproject.toml
ackbert/docs/: ackbert-one-pager.md  methodology.md
ackbert/examples/: basic_usage.py
ackbert/ontology/: ackbert-ontology.ttl
ackbert/scripts/: validate_ontology.py
ackbert/src/ackbert/: __init__.py  cli.py  comparison.py  evidence.py  ontology.py  rm_base.py  visualization.py
ackbert/tests/: __init__.py  test_comparison.py  test_ontology.py  test_rm_compliance.py
agent_sessions/: iteration_10_context.json  iteration_11_context.json  iteration_12_context.json  iteration_13_context.json  iteration_1_context.json  iteration_2_context.json  iteration_3_context.json  iteration_4_context.json  iteration_5_context.json  iteration_6_context.json  iteration_7_context.json  iteration_8_context.json  iteration_9_context.json
backup/: project_model_registry_1755637052.json
backups/: project_model_backup_1756680217.json  project_model_backup_1756680577.json  project_model_backup_1756680654.json  project_model_backup_1756681878.json  project_model_backup_1756681977.json  project_model_backup_1756682000.json  project_model_backup_1756682041.json  project_model_backup_1756687339.json  project_model_backup_1756687514.json  project_model_backup_1756687611.json  project_model_backup_1756687616.json  project_model_backup_1756687620.json  project_model_backup_1756687665.json  project_model_backup_1756730227.json  project_model_backup_1756730231.json  project_model_backup_1756730245.json  project_model_backup_1756735743.json  project_model_backup_1756748099.json  project_model_registry_20250831_092627.json  project_model_registry_20250831_092637.json  project_model_registry_20250831_093704.json  project_model_registry_20250831_093714.json  project_model_registry_20250831_093722.json  project_model_registry_20250831_100029.json  project_model_registry_20250831_100040.json  project_model_registry_20250831_100050.json  project_model_registry_20250831_101246.json  project_model_registry_20250831_101255.json  project_model_registry_20250831_103748.json  project_model_registry_backup_1756730440.json  project_model_registry_backup_1756730481.json  project_model_registry_backup_1756730487.json  project_model_registry_backup_1756732541.json  project_model_registry_backup_1756732548.json  project_model_registry_backup_1756733236.json  project_model_registry_backup_1756733268.json  project_model_registry_backup_1756733629.json  project_model_registry_backup_1756733638.json  project_model_registry_backup_1756733645.json  project_model_registry_backup_1756733809.json  (+29 more)
beastmaster-ontology-v0.1/: README.md
beastmaster-ontology-v0.2/: README.md
cloudrun/: Dockerfile  cloudbuild.yaml  kiro-agent-cloudrun.yaml  (+1 more)
cloudrun-clean/: simple_kiro_agent.py
generated_packages/openflow-ghostbusters-api/: README.md  pyproject.toml  setup.py
generated_packages/openflow-ghostbusters-api/src/openflow_ghostbusters_api/: __init__.py  main.py
generated_packages/openflow-mdc-generator/: README.md  pyproject.toml  setup.py
generated_packages/openflow-mdc-generator/src/openflow_mdc_generator/: __init__.py  main.py
gmail-calendar-system/: CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
gmail-calendar-system/src/gmail_calendar_system/: __init__.py  mcp_server.py  parsers.py
gmail-calendar-system/src/gmail_calendar_system.egg-info/: PKG-INFO
gmail-calendar-system/src/gmail_calendar_system/mcp_tools/: gmail_tool.py
op-api-manager/: .coverage  ARCHITECTURE.md  INTEGRATION_GUIDE.md  LICENSE  MIGRATION_SUMMARY.md  Makefile  PACKAGE_SUMMARY.md  README.md  build_and_test.py  coverage.xml  integrate_cache_manager.py  integrate_with_main.py  migrate_to_unified.py  pyproject.toml  test_individual_key.py  test_integration.py  test_specific_key.py  test_unified_interface.py
op-api-manager/examples/: basic_usage.py
op-api-manager/src/op_api_manager/: __init__.py  cli.py  core.py  models.py  provider_detector.py  status_manager.py  unified_interface.py
op-api-manager/tests/: __init__.py  test_cli.py  test_core.py  test_models.py  test_new_features.py
subprojects/tidb-agentx-hackathon/: Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml
subprojects/tidb-agentx-hackathon/src/tidb_agentx_hackathon/: agents.py  core.py  tidb_integration.py  workflows.py
subprojects/tidb-agentx-hackathon/tests/: test_core.py
(+1821 files in other folders)
