[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openflow-mdc-generator"
version = "0.1.0"
description = "OpenFlow Mdc Generator package"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "OpenFlow Team", email = "team@openflow.dev"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = ["openflow", "mdc_generator", "development", "tools"]
requires-python = ">=3.8"
dependencies = [
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/openflow/openflow-mdc_generator"
Repository = "https://github.com/openflow/openflow-mdc_generator"
Documentation = "https://openflow-mdc_generator.readthedocs.io"
