[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tidb-agentx-hackathon"
version = "0.1.0"
description = "TiDB AgentX Hackathon 2025 - AI-powered multi-agent testing with TiDB Serverless"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Lou Springer", email = "lou@openflow.dev"},
    {name = "OpenFlow Playground", email = "team@openflow.dev"}
]
keywords = ["tidb", "ai", "multi-agent", "hackathon", "vector-search", "openflow"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]
requires-python = ">=3.9"
dependencies = [
    # OpenFlow Tools (installed as editable packages)
    "openflow-ghostbusters @ file://../generated_packages/openflow-ghostbusters",
    "openflow-code-quality @ file://../generated_packages/openflow-code-quality",
    "openflow-security-first @ file://../generated_packages/openflow-security-first",
    "openflow-mdc-generator @ file://../generated_packages/openflow-mdc-generator",
    
    # TiDB and Database
    "tidb-connector-python>=2.0.0",
    "pymysql>=1.1.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    
    # AI and Machine Learning
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    
    # Visualization and UI
    "streamlit>=1.28.0",
    "plotly>=5.15.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    
    # Vector Search and Embeddings
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.0",
    "openai>=1.0.0",
    "tiktoken>=0.5.0",
    
    # Development and Testing
    "pytest>=7.4.0",
    "pytest-mock>=3.11.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    
    # Security and Quality
    "bandit>=1.7.0",
    "safety>=2.3.0",
    "detect-secrets>=1.4.0",
    
    # Utilities
    "click>=8.1.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "aiohttp>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-mock>=3.11.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
    "pre-commit>=3.3.0",
]

security = [
    "bandit>=1.7.0",
    "safety>=2.3.0",
    "detect-secrets>=1.4.0",
    "semgrep>=1.40.0",
]

docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.2.0",
    "mkdocstrings>=0.22.0",
    "mkdocstrings-python>=1.3.0",
]

notebooks = [
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "ipykernel>=6.25.0",
    "ipywidgets>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/openflow-playground/tidb-agentx-hackathon"
Documentation = "https://tidb-agentx-hackathon.readthedocs.io"
Repository = "https://github.com/openflow-playground/tidb-agentx-hackathon.git"
Issues = "https://github.com/openflow-playground/tidb-agentx-hackathon/issues"
Changelog = "https://github.com/openflow-playground/tidb-agentx-hackathon/blob/main/CHANGELOG.md"

[project.scripts]
tidb-hackathon = "tidb_hackathon.cli:main"
tidb-agent = "tidb_hackathon.agent:main"
tidb-test = "tidb_hackathon.testing:main"

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["tidb_hackathon"]
known_openflow = ["ghostbusters", "multi_agent_testing", "security_first", "mdc_generator"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "tidb_connector_python.*",
    "pymysql.*",
    "sqlalchemy.*",
    "streamlit.*",
    "plotly.*",
    "matplotlib.*",
    "seaborn.*",
    "sklearn.*",
    "faiss.*",
    "openai.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests", "src"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "e2e: marks tests as end-to-end tests",
    "tidb: marks tests that require TiDB connection",
    "openflow: marks tests that use OpenFlow tools",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.bandit]
exclude_dirs = ["tests", "venv", "env"]
skips = ["B101", "B601"]

[tool.safety]
output = "json"
full_report = true

[tool.ruff]
target-version = "py39"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["B011"]

# OpenFlow Tools Configuration
[tool.openflow]
project_type = "hackathon"
integration_mode = "editable_packages"
openflow_root = "../.."

[tool.openflow.tools]
ghostbusters = {enabled = true, mode = "development"}
code_quality = {enabled = true, mode = "development"}
security_first = {enabled = true, mode = "development"}
mdc_generator = {enabled = true, mode = "development"}

[tool.openflow.tidb]
serverless = true
vector_search = true
multi_agent_testing = true
ai_integration = true

# TiDB-specific configuration
[tool.tidb]
connection = {type = "serverless", region = "us-east-1"}
vector_search = {enabled = true, model = "sentence-transformers/all-MiniLM-L6-v2"}
ai_agents = {count = 5, types = ["tester", "validator", "optimizer", "security", "documentation"]}







